--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.0",
-    "@react-navigation/stack": "^6.4.1",
-    "expo": "^52.0.14",
+    "@react-navigation/stack": "^7.0.18",
+    "expo": "~52.0.18",
     "expo-asset": "~11.0.1",
     "expo-auth-session": "~6.0.1",
     "expo-constants": "~17.0.3",
@@ -27,14 +27,15 @@
     "expo-font": "~13.0.1",
     "expo-image": "~2.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.11",
-    "expo-splash-screen": "~0.29.13",
+    "expo-router": "4.0.11",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.5",
+    "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "fuse.js": "^7.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
