--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "^4.5.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.0",
     "expo": "~52.0.18",
